# ChangeLog for games-arcade/sdl-ball
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> sdl-ball-1.0.ebuild:
  Re-enabled sound flag by default.

  11 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> metadata.xml:
  Updated metadata.

  11 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-1.0.ebuild:
  Updated again (Christian Ruppert (idl0r)).

  11 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-1.0.ebuild:
  Now using src_prepare (suggested by Tomáš Chvátal).

  11 Jan 2009; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-1.0.ebuild:
  Updated ebuild, thanks to Christian Ruppert (idl0r).

  09 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> +sdl-ball-1.0.ebuild:
  Bumped.

  27 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-0.14.ebuild:
  Fixed missing USE depend.

  27 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-0.14.ebuild:
  Fixed another sound issue...

  27 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-0.14.ebuild:
  Sound should be enabled by default.

  27 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> sdl-ball-0.14.ebuild:
  Fixed some sound issue and added EAPI=2.

  27 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> +files/0.14-Makefile.patch,
  sdl-ball-0.14.ebuild, +metadata.xml:
  Updated ebuild.

  26 Dec 2008; Piotr Szymaniak <lazy_bum@o2.pl> -sdl-ball-0.08.ebuild,
  +sdl-ball-0.14.ebuild:
  Version bump.

  10 Aug 2008; Piotr Szymaniak <lazy_bum@o2.pl> +sdl-ball-0.08.ebuild:
  New package.
