@@ -1,7 +1,7 @@
 AUX 0.14-Makefile.patch 585 RMD160 38cd59728956473bb5b2c1f4c3e27235c4d580cb SHA1 8faf942fa60f4fa664e057fcc996ceeadf73b4b6 SHA256 2d9f157c617275210b918520d4f15155ba70df06980c93896e80c837ea63208c
 DIST sdl-ball-0.14.tar.bz2 3228265 RMD160 8625c506ea1eaaf3a005e01b12b57c0d9b76340d SHA1 523f51becf670bafdf1813e3be6f25167f8fd371 SHA256 8d07c1e0230be71d43cb223828eb362bd524c3f99f9eb8cd4020dc3262eda215
 DIST sdl-ball-1.0.tar.bz2 3389533 RMD160 63a6f9e801be0773013a0807ff1f1d41edc27fef SHA1 600eb9edd6bfe53bc24edcc3d7d69a4ae9d923d4 SHA256 aac5bb41fc7e826e70a59544f954e2c132bc236d2279a194e1483d40da9aad4e
-EBUILD sdl-ball-0.14.ebuild 1192 RMD160 99efd9955c652e79bc895c186a09b8bcce411c57 SHA1 d7ed0386de0c6178fe3e07c3015a4c3f84900e93 SHA256 4d976a2febcf502942d1b608f43533a5d63d4182643f726d45149d974facf397
+EBUILD sdl-ball-0.14.ebuild 1195 RMD160 f0bcef5064ec9c396368d6ba7d0e9357673837f8 SHA1 631ae27616f1082341abdc6f242e255a9a138261 SHA256 9e00701a2ffb7496d9ad2e7f9ebfaacf007ce9573a0c141f63532b223df8dca5
 EBUILD sdl-ball-1.0.ebuild 1792 RMD160 38302a8c8fb3dff039b416ac9edc1afc3e7627ab SHA1 60e0b1db1e3c8173dc697594c19624bc1c44ea4d SHA256 91479dd35cf46cdb2fefd7d6b2c981879a528f862531f02093293f8cf4fc2e7e
-MISC ChangeLog 1519 RMD160 13391238e8aa14cdbd5377b84b40e1638d953a40 SHA1 170524746c6e6e117a27279c5710956a85aa6429 SHA256 ffba4a64dbf778009db9f95bb1789827ca26f25470cbf3bff7a8b724cde43dd0
+MISC ChangeLog 1640 RMD160 c4ec0e0c2607cbf4bf045c5a2f94f83a36067779 SHA1 ba584c66a89423eda0c5800a40da34cfe27caa1b SHA256 b91ae517a8ccb4512a1b2a35e9b2a8b7b9fe5c270aacec0ddc58dfd1a7035d2a
 MISC metadata.xml 447 RMD160 8fc0ce10a96687be6687ba46f66aa6de842ebbda SHA1 2b6e0fc50dac83c913b49e9e8ab8a82cad46e65d SHA256 1e938c3d2a30c8c81f507bd297c651655297e13032b7fd024e7763da4bd588a7
