@@ -2,6 +2,9 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  22 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> sdl-ball-0.14.ebuild:
+  Renamed USE wiiuse to wiimote in older ebuild.
+
   14 Jan 2009; Michał Ziąbkowski <mziab@o2.pl> sdl-ball-1.0.ebuild:
   Re-enabled sound flag by default.
 
